--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />    
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
     
@@ -29,6 +30,7 @@
     <script defer src="./js/youtube.js"></script>
     <!-- ScrollMagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -38,10 +40,10 @@
                 <img src="./images/starbucks_logo.png" alt="logo">
             </a>
 
-            <div class="sub-menu">
+            <div class="sub-menu">  
                 <ul class="menu">
                     <li>
-                        <a href="/signin">Sign In</a>
+                        <a href="/signin">Sign In</a>   <!--파일명 없으면 index.html 이 생략되어 있음 -->
                     </li>
                     <li>
                         <a href="javascript:void(0)">My Starbucks</a>
